--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <title>Help Me Choose</title>
+	<link href="./main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 	<h1>Help me choose between..</h1>
-	<div>
-		<div>
+	<div class="inputSection">
+		<div class="inputs">
 			<input placeholder="Something">
 		</div>
-		<button>Add</button>
+		<button class="addOption">Add</button>
 	</div>
 	<button>Go</button>
 </body>
